objects/RDR_Sales__c.object
<CustomObject>
    <fields>
        <fullName>AHM_Bill_of_Lading_Identification_TXT__c</fullName>
        <label>AHM Bill of Lading Identification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_Inst_TXT__c</fullName>
        <label>Accessory Inst</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accessory_TXT__c</fullName>
        <label>Accessory</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date_DT__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_VIN_Status_Code__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the VIN-STATUS
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Auto VIN Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Warranty_End_Date_DT__c</fullName>
        <label>Base Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CUST_TYP_CD__c</fullName>
        <label>CUST-TYP-CD</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Number_TXT__c</fullName>
        <label>Carrier Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_TXT__c</fullName>
        <label>Customer Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Address_ZIP_Code_TXT__c</fullName>
        <label>Customer Address ZIP Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Cellphone_Number__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the CELL_PHONE
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Customer Cellphone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_City_TXT__c</fullName>
        <label>Customer City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_First_Name_NUM__c</fullName>
        <label>Customer First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Home_Phone_Number__c</fullName>
        <label>Customer Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Name_NM__c</fullName>
        <label>Customer Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_MI_Code__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Customer MI Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_NM__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number_NUM__c</fullName>
        <label>Customer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Street_Address_TXT__c</fullName>
        <label>Customer Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Number_NUM__c</fullName>
        <label>Dealer Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Order_Invoice_Number_NUM__c</fullName>
        <label>Dealer Order Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date_DT__c</fullName>
        <label>Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Date_DT__c</fullName>
        <label>Demo Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_id_TXT__c</fullName>
        <label>Email id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engine_Identification_TXT__c</fullName>
        <label>Engine Identification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Warranty_TXT__c</fullName>
        <label>Ext Warranty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Filler_TXT__c</fullName>
        <label>Filler</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intransit_Shipment_Number_TXT__c</fullName>
        <label>Intransit Shipment Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date_DT__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invt_Flag_TXT__c</fullName>
        <label>Invt Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsToDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launchbox_ID__c</fullName>
        <externalId>true</externalId>
        <label>Launchbox_ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Model_Year_TXT__c</fullName>
        <label>Legacy Model Year</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_code_CD__c</fullName>
        <label>Location code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Code_CD__c</fullName>
        <label>Manufacturer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mfg_PS_Code_CD__c</fullName>
        <label>Mfg PS Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Miles_at_Retail_NUM__c</fullName>
        <label>Miles at Retail</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_ID__c</fullName>
        <label>Model Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Name_Code_CD__c</fullName>
        <label>Model Name Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Dealer_Number_From_Buy_Sell__c</fullName>
        <label>New Dealer Number From Buy Sell</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Status_Code_CD__c</fullName>
        <label>Owner Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Address__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Address
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Cellphone_Number__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Cell Phone
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Cellphone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_City_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver City
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver City Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Email__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Email
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_First_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the  FST-NAME
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver First Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Home_Phone_Number__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Home Phone
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Last_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the LAST_NAME
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Middle_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Middle Name
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Middle Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Phone_Number__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Phone
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_State_Name__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver State
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver State Name</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Title_Code__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Title Code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Driver_Zip_Code__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Description: This is to store the Driver Zip
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Primary Driver Zip Code</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Identifier_TXT__c</fullName>
        <label>Product Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Use_Code_CD__c</fullName>
        <label>Product Use Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_codeline_TXT__c</fullName>
        <label>Product code/line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDR_Sales_Identifier_TXT__c</fullName>
        <label>RDR Sales Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDR_Sold_Model__c</fullName>
        <label>RDR Sold Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDR_Transation_Date__c</fullName>
        <label>RDR Transation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_Code_CD__c</fullName>
        <label>Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Date_DT__c</fullName>
        <label>Retail Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Sales_Type_Code__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Retail Sales Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                    <isActive>false</isActive>
                    <label>S</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Date_DT__c</fullName>
        <label>Sales Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serial_Number_NUM__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Date_DT__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Model_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold Model Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Code_CD__c</fullName>
        <label>State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code_CD__c</fullName>
        <label>Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision_TXT__c</fullName>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subdivision</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone_Number_NUM__c</fullName>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Timestamp_DT__c</fullName>
        <label>Timestamp (YYYYMMDDHHMMSS)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Sales_Dealer_Number_NUM__c</fullName>
        <label>Unit Sales Dealer Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Status_Code_CD__c</fullName>
        <label>Unit Status Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Warranty_MICR_Reference_Number_TXT__c</fullName>
        <label>Unit Warranty MICR Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_by_New_MB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated by New MB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VIN_number_prefix_identifier_TXT__c</fullName>
        <label>VIN number prefix identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Status__c</fullName>
        <description>Business Unit: HELMS.
Jira Story: LMS-5532 Story name.
Source System: Coming from Integration from Mainframe/SAP.
Integration: NA.
Data Transformation: N/A.</description>
        <label>Vehicle Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vin_TXT__c</fullName>
        <label>Vin</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Control_Number_NUM__c</fullName>
        <label>Warehouse Control Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <label>Warehouse ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Registration_Date_DT__c</fullName>
        <label>Warranty Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XPROD_DIV_CD__c</fullName>
        <label>XPROD-DIV-CD</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isUnwind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isUnwind</label>
        <type>Checkbox</type>
    </fields>
    <label>RDR Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>XPROD_DIV_CD__c</columns>
        <columns>Product_Use_Code_CD__c</columns>
        <columns>Status_Code_CD__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Updated_by_New_MB__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PSP_RDR</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Subdivision_TXT__c</field>
            <operation>equals</operation>
            <value>Motorcycle</value>
        </filters>
        <label>PSP RDR</label>
    </listViews>
    <nameField>
        <displayFormat>RDR Sales - {00000000}</displayFormat>
        <label>RDR Sales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDR Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>